--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <p>Welcome to My repository</p>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, natus nulla. Maxime architecto asperiores facere magnam temporibus provident ea enim laboriosam error quos quidem, ullam veniam doloribus ex amet modi.</p>
 </body>
 </html>
