--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Demo HTML</title>
 </head>
 <body>
-<p>Welcome to My repository</p>
-<p>Second paragraph</p>
+<p>This is my paragraph</p>
 </body>
 </html>
