--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 </head>
 <body>
 <p>Welcome to My repository</p>
-<<<<<<< HEAD
 <p>Hello Teacher</p>
 =======
-<H1>Hello the other side.</H1>
+<H1>hiiiiiiiiiiiiiiiiiiiii</H1>
 
->>>>>>> de3ce7ea96f85c25e321934c6b4d633952c0a93c
 </body>
 </html>
